--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "Wiki-API",
+  "name": "ejs-challenge",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.0"
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
+    "mongoose": "^6.6.5"
   }
 }
